src/carla_backend.py


  for line in output:
    if (line == "carla-discovery::init::-----------"):
      pinfo = deepcopy(PyPluginInfo)
      pinfo['type']   = itype
      pinfo['binary'] = filename

    elif (line == "carla-discovery::end::------------"):
      if (pinfo != None):
        plugins.append(pinfo)
        pinfo = None

    elif (line == "Segmentation fault"):
      print("carla-discovery::crash::%s crashed during discovery" % (filename))

    elif line.startswith("err:module:import_dll Library"):
      print(line)

    elif line.startswith("carla-discovery::error::"):
      print("%s - %s" % (line, filename))

    elif line.startswith("carla-discovery::"):
      if (pinfo == None):
        continue

      prop, value = line.replace("carla-discovery::","").split("::", 1)

      if (prop == "name"):
        pinfo['name'] = value if (value) else short_name
      elif (prop == "label"):
        pinfo['label'] = value if (value) else short_name
      elif (prop == "maker"):
        pinfo['maker'] = value
      elif (prop == "copyright"):
        pinfo['copyright'] = value
      elif (prop == "unique_id"):
        if value.isdigit(): pinfo['unique_id'] = int(value)
      elif (prop == "hints"):
        if value.isdigit(): pinfo['hints'] = int(value)
      elif (prop == "category"):
        if value.isdigit(): pinfo['category'] = int(value)
      elif (prop == "audio.ins"):
        if value.isdigit(): pinfo['audio.ins'] = int(value)
      elif (prop == "audio.outs"):
        if value.isdigit(): pinfo['audio.outs'] = int(value)
      elif (prop == "audio.total"):
        if value.isdigit(): pinfo['audio.total'] = int(value)
      elif (prop == "midi.ins"):
        if value.isdigit(): pinfo['midi.ins'] = int(value)
      elif (prop == "midi.outs"):
        if value.isdigit(): pinfo['midi.outs'] = int(value)
      elif (prop == "midi.total"):
        if value.isdigit(): pinfo['midi.total'] = int(value)
      elif (prop == "parameters.ins"):
        if value.isdigit(): pinfo['parameters.ins'] = int(value)
      elif (prop == "parameters.outs"):
        if value.isdigit(): pinfo['parameters.outs'] = int(value)
      elif (prop == "parameters.total"):
        if value.isdigit(): pinfo['parameters.total'] = int(value)
      elif (prop == "programs.total"):
        if value.isdigit(): pinfo['programs.total'] = int(value)
      elif (prop == "build"):
        if value.isdigit(): pinfo['build'] = int(value)

  # Additional checks
  for pinfo in plugins:
    if (itype == PLUGIN_DSSI):
      if (findDSSIGUI(pinfo['binary'], pinfo['name'], pinfo['label'])):
        pinfo['hints'] |= PLUGIN_HAS_GUI

  return plugins

def checkPluginLADSPA(filename, tool, isWine=False):
  return runCarlaDiscovery(PLUGIN_LADSPA, "LADSPA", filename, tool, isWine)

def checkPluginDSSI(filename, tool, isWine=False):
  return runCarlaDiscovery(PLUGIN_DSSI, "DSSI", filename, tool, isWine)

def checkPluginVST(filename, tool, isWine=False):
  return runCarlaDiscovery(PLUGIN_VST, "VST", filename, tool, isWine)

def checkPluginSF2(filename, tool):
  return runCarlaDiscovery(PLUGIN_SF2, "SF2", filename, tool)

#def checkPluginLV2(rdf_info):
  #plugins = []

  #pinfo = deepcopy(PyPluginInfo)
  #pinfo['type'] = PLUGIN_LV2
  #pinfo['category'] = PLUGIN_CATEGORY_NONE # TODO
  #pinfo['hints'] = 0
  #pinfo['binary'] = rdf_info['Binary']
  #pinfo['name'] = rdf_info['Name']
  #pinfo['label'] = rdf_info['URI']
  #pinfo['maker'] = rdf_info['Author']
  #pinfo['copyright'] = rdf_info['License']
  #pinfo['id'] = str(rdf_info['UniqueID'])
  #pinfo['audio.ins'] = 0
  #pinfo['audio.outs'] = 0
  #pinfo['audio.total'] = 0
  #pinfo['midi.ins'] = 0
  #pinfo['midi.outs'] = 0
  #pinfo['midi.total'] = 0
  #pinfo['parameters.ins'] = 0
  #pinfo['parameters.outs'] = 0
  #pinfo['parameters.total'] = 0
  #pinfo['programs.total'] = rdf_info['PresetCount']

  #if (not rdf_info['Bundle'] or pinfo['binary'] == "" or pinfo['name'] == ""):
    #return None

  #for i in range(rdf_info['PortCount']):
    #PortType = rdf_info['Ports'][i]['Type']
    #PortProps = rdf_info['Ports'][i]['Properties']
    #if (PortType & lv2_rdf.LV2_PORT_AUDIO):
      #pinfo['audio.total'] += 1
      #if (PortType & lv2_rdf.LV2_PORT_INPUT):
        #pinfo['audio.ins'] += 1
      #elif (PortType & lv2_rdf.LV2_PORT_OUTPUT):
        #pinfo['audio.outs'] += 1
    #elif (PortType & lv2_rdf.LV2_PORT_EVENT_MIDI):
      #pinfo['midi.total'] += 1
      #if (PortType & lv2_rdf.LV2_PORT_INPUT):
        #pinfo['midi.ins'] += 1
      #elif (PortType & lv2_rdf.LV2_PORT_OUTPUT):
        #pinfo['midi.outs'] += 1
    #elif (PortType & lv2_rdf.LV2_PORT_CONTROL):
      #pinfo['parameters.total'] += 1
      #if (PortType & lv2_rdf.LV2_PORT_INPUT):
        #pinfo['parameters.ins'] += 1
      #elif (PortType & lv2_rdf.LV2_PORT_OUTPUT):
        #if (not PortProps & lv2_rdf.LV2_PORT_LATENCY):
          #pinfo['parameters.outs'] += 1

  #if (rdf_info['Type'] & lv2_rdf.LV2_GROUP_GENERATOR):
    #pinfo['hints'] |= PLUGIN_IS_SYNTH

  #if (rdf_info['UICount'] > 0):
    #pinfo['hints'] |= PLUGIN_HAS_GUI

  #plugins.append(pinfo)

  #return plugins

# ------------------------------------------------------------------------------------------------
# Backend C++ -> Python variables

c_enum = c_int
c_nullptr = None

# static max values
MAX_PLUGINS     = 99
MAX_PARAMETERS  = 200
MAX_MIDI_EVENTS = 512

# plugin hints
PLUGIN_HAS_GUI     = 0x01
PLUGIN_IS_BRIDGE   = 0x02
PLUGIN_IS_SYNTH    = 0x04
PLUGIN_USES_CHUNKS = 0x08
PLUGIN_CAN_DRYWET  = 0x10
PLUGIN_CAN_VOL     = 0x20
PLUGIN_CAN_BALANCE = 0x40

# parameter hints
PARAMETER_IS_ENABLED        = 0x01
PARAMETER_IS_AUTOMABLE      = 0x02
PARAMETER_HAS_STRICT_BOUNDS = 0x04
PARAMETER_USES_SCALEPOINTS  = 0x08
PARAMETER_USES_SAMPLERATE   = 0x10

# enum BinaryType
BINARY_NONE   = 0
BINARY_UNIX32 = 1
BINARY_UNIX64 = 2
BINARY_WIN32  = 3
BINARY_WIN64  = 4

# enum PluginType
PLUGIN_NONE   = 0
PLUGIN_LADSPA = 1
PLUGIN_DSSI   = 2
PLUGIN_LV2    = 3
PLUGIN_VST    = 4
PLUGIN_SF2    = 5

# enum PluginCategory
PLUGIN_CATEGORY_NONE      = 0
PLUGIN_CATEGORY_SYNTH     = 1
PLUGIN_CATEGORY_DELAY     = 2 # also Reverb
PLUGIN_CATEGORY_EQ        = 3
PLUGIN_CATEGORY_FILTER    = 4
PLUGIN_CATEGORY_DYNAMICS  = 5 # Amplifier, Compressor, Gate
PLUGIN_CATEGORY_MODULATOR = 6 # Chorus, Flanger, Phaser
PLUGIN_CATEGORY_UTILITY   = 7 # Analyzer, Converter, Mixer
PLUGIN_CATEGORY_OUTRO     = 8 # used to check if a plugin has a category

# enum ParameterType
PARAMETER_UNKNOWN = 0
PARAMETER_INPUT   = 1
PARAMETER_OUTPUT  = 2

# enum InternalParametersIndex
PARAMETER_ACTIVE = -1
PARAMETER_DRYWET = -2
PARAMETER_VOLUME = -3
PARAMETER_BALANCE_LEFT  = -4
PARAMETER_BALANCE_RIGHT = -5

# enum GuiType
GUI_NONE         = 0
GUI_INTERNAL_QT4 = 1
GUI_INTERNAL_X11 = 2
GUI_EXTERNAL_OSC = 3
GUI_EXTERNAL_LV2 = 4

# enum OptionsType
OPTION_GLOBAL_JACK_CLIENT = 1

# enum CallbackType
CALLBACK_DEBUG                = 0
CALLBACK_PARAMETER_CHANGED    = 1 # parameter_id, 0, value
CALLBACK_PROGRAM_CHANGED      = 2 # program_id, 0, 0
CALLBACK_MIDI_PROGRAM_CHANGED = 3 # midi_program_id, 0, 0
CALLBACK_NOTE_ON              = 4 # key, velocity, 0
CALLBACK_NOTE_OFF             = 5 # key, velocity, 0
CALLBACK_SHOW_GUI             = 6 # show? (0|1, -1=quit), 0, 0
CALLBACK_RESIZE_GUI           = 7 # width, height, 0
CALLBACK_UPDATE               = 8
CALLBACK_RELOAD_INFO          = 9
CALLBACK_RELOAD_PARAMETERS    = 10
CALLBACK_RELOAD_PROGRAMS      = 11
CALLBACK_RELOAD_ALL           = 12
CALLBACK_QUIT                 = 13

class ParameterData(Structure):
  _fields_ = [
    ("type", c_enum),
    ("index", c_int32),
    ("rindex", c_int32),
    ("hints", c_int32),
    ("midi_channel", c_uint8),
    ("midi_cc", c_int16)
  ]

class ParameterRanges(Structure):
  _fields_ = [
    ("def", c_double),
    ("min", c_double),
    ("max", c_double),
    ("step", c_double),
    ("step_small", c_double),
    ("step_large", c_double)
  ]

class CustomData(Structure):
  _fields_ = [
    ("type", c_char_p),
    ("key", c_char_p),
    ("value", c_char_p)
  ]

class GuiData(Structure):
  _fields_ = [
    ("type", c_enum),
    ("visible", c_bool),
    ("resizable", c_bool),
    ("width", c_uint),
    ("height", c_uint),
    ("name", c_char_p), # DSSI Filename; LV2 Window Title
    ("show_now", c_bool)
  ]

class PluginInfo(Structure):
  _fields_ = [
    ("valid", c_bool),
    ("type", c_enum),
    ("category", c_enum),
    ("hints", c_uint),
    ("binary", c_char_p),
    ("name", c_char_p),
    ("label", c_char_p),
    ("maker", c_char_p),
    ("copyright", c_char_p),
    ("unique_id", c_long)
  ]

class PortCountInfo(Structure):
  _fields_ = [
    ("valid", c_bool),
    ("ins", c_uint32),
    ("outs", c_uint32),
    ("total", c_uint32)
  ]

class ParameterInfo(Structure):
  _fields_ = [
    ("valid", c_bool),
    ("name", c_char_p),
    ("symbol", c_char_p),
    ("label", c_char_p),
    ("scalepoint_count", c_uint32)
  ]

class ScalePointInfo(Structure):
  _fields_ = [
    ("valid", c_bool),
    ("value", c_double),
    ("label", c_char_p)
  ]

class MidiProgramInfo(Structure):
  _fields_ = [
    ("valid", c_bool),
    ("bank", c_uint32),
    ("program", c_uint32),
    ("label", c_char_p)
  ]

class PluginBridgeInfo(Structure):
  _fields_ = [
    ("category", c_enum),
    ("hints", c_uint),
    ("name", c_char_p),
    ("maker", c_char_p),
    ("unique_id", c_long),
    ("ains", c_uint32),
    ("aouts", c_uint32)
  ]

CallbackFunc = CFUNCTYPE(None, c_enum, c_ushort, c_int, c_int, c_double)

if (LINUX or MACOS):
  BINARY_NATIVE = BINARY_UNIX64 if (is64bit) else BINARY_UNIX32
elif (WINDOWS):
  BINARY_NATIVE = BINARY_WIN64 if (is64bit) else BINARY_WIN32
else:
  BINARY_NATIVE = BINARY_NONE

# ------------------------------------------------------------------------------------------------
# Backend C++ -> Python object

class Host(object):
    def __init__(self):
        object.__init__(self)

        if (WINDOWS):
          libname = "carla_backend.dll"
        elif (MACOS):
          libname = "carla_backend.dylib"
        else:
          libname = "carla_backend.so"

        self.lib = cdll.LoadLibrary(os.path.join("carla", libname))

        self.lib.carla_init.argtypes = [c_char_p]
        self.lib.carla_init.restype = c_bool

        self.lib.carla_close.argtypes = None
        self.lib.carla_close.restype = c_bool

        self.lib.carla_is_engine_running.argtypes = None
        self.lib.carla_is_engine_running.restype = c_bool

        self.lib.add_plugin.argtypes = [c_enum, c_enum, c_char_p, c_char_p, c_void_p]
        self.lib.add_plugin.restype = c_short

        self.lib.remove_plugin.argtypes = [c_ushort]
        self.lib.remove_plugin.restype = c_bool

        self.lib.get_plugin_info.argtypes = [c_ushort]
        self.lib.get_plugin_info.restype = POINTER(PluginInfo)

        self.lib.get_audio_port_count_info.argtypes = [c_ushort]
        self.lib.get_audio_port_count_info.restype = POINTER(PortCountInfo)

        self.lib.get_midi_port_count_info.argtypes = [c_ushort]
        self.lib.get_midi_port_count_info.restype = POINTER(PortCountInfo)

        self.lib.get_parameter_count_info.argtypes = [c_ushort]
        self.lib.get_parameter_count_info.restype = POINTER(PortCountInfo)

        self.lib.get_parameter_info.argtypes = [c_ushort, c_uint32]
        self.lib.get_parameter_info.restype = POINTER(ParameterInfo)

        self.lib.get_scalepoint_info.argtypes = [c_ushort, c_uint32, c_uint32]
        self.lib.get_scalepoint_info.restype = POINTER(ScalePointInfo)

        self.lib.get_midi_program_info.argtypes = [c_ushort, c_uint32]
        self.lib.get_midi_program_info.restype = POINTER(MidiProgramInfo)

        self.lib.get_parameter_data.argtypes = [c_ushort, c_uint32]
        self.lib.get_parameter_data.restype = POINTER(ParameterData)

        self.lib.get_parameter_ranges.argtypes = [c_ushort, c_uint32]
        self.lib.get_parameter_ranges.restype = POINTER(ParameterRanges)
